[package]
name = "rusttest"
version = "0.1.0"
edition = "2024"

[dependencies]
pixels = "0.15"
rand = "0.9.2"
winit = "0.29"
winit_input_helper = "0.16.0"
iced ={ version = "0.14" }
rfd ={ version = "0.16" }
tokio = { version = "1", features = ["full"] }
eframe = { version = "0.33", features = ["default"] }